<resources>
    <string name="app_name">AgroLine</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="registration">Registration</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="default_web_client_id">1234567890123-abc123def123ghijklmno456pqrstu789.apps.googleusercontent.com</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="loading">Loading..</string>
    <string name="weather">Weather</string>
    <string name="manage">Manage</string>
    <string name="workers">Workers</string>
    <string name="sowing_calendar">Sowing calendar</string>
    <string name="logout">Logout</string>
    <string name="calculate_the_days">Calculate the days</string>
    <string name="hello">Hello</string>
    <string name="hello1">ᅠ ᅠ</string>
    <string name="calculate_days">Calculate days</string>

</resources>