<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#343434"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="117dp"
        android:fontFamily="@font/krona_one"
        android:text="@string/loading"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#849F59"
        android:fontFamily="@font/krona_one"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="334dp"
        android:layout_height="72dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="117dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="#849F59"
        android:fontFamily="@font/krona_one"
        android:text="hyuhuuhu"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <Button
        android:id="@+id/button3"
        android:layout_width="163dp"
        android:layout_height="80dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="65dp"
        android:backgroundTint="#849F59"
        android:fontFamily="@font/krona_one"
        android:text="@string/manage"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="163dp"
        android:layout_height="80dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="65dp"
        android:backgroundTint="#849F59"
        android:fontFamily="@font/krona_one"
        android:text="@string/workers"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button6"
        android:layout_width="334dp"
        android:layout_height="72dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="115dp"
        android:backgroundTint="#849F59"
        android:fontFamily="@font/krona_one"
        android:text="@string/sowing_calendar"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/logout_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="83dp"
        android:layout_height="58dp"
        android:layout_marginStart="103dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="71dp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:srcCompat="@drawable/workers" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="83dp"
        android:layout_height="58dp"
        android:layout_marginStart="164dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="164dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:srcCompat="@drawable/calendar" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="83dp"
        android:layout_height="58dp"
        android:layout_marginStart="71dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:srcCompat="@drawable/manage" />


</androidx.constraintlayout.widget.ConstraintLayout>